# rust_practice

./: ch07_01.rs
big_query_rust/: Cargo.toml
big_query_rust/secret_key/: dx-imt-0eceefac3745.json
big_query_rust/src/: main.rs
bitonic-sorter/: Cargo.toml
bitonic-sorter/src/: first.rs  fourth.rs  lib.rs  second.rs  third.rs  utils.rs
candle_stick/: Cargo.toml
candle_stick/src/: main.rs
ch_04/: Cargo.toml
ch_04/examples/: ch04_01_units.rs  ch04_02_bool.rs  ch04_03_interger.rs  ch04_04_overflowed1.rs
ch_05/: Cargo.toml
ch_05/src/: main.rs
ch_07/: Cargo.toml
ch_07/src/: main.rs
ch_08/: Cargo.toml
ch_08/example/: ch08_01.rs
ch_08/src/: main.rs
chapter/: Cargo.toml
datafusion_test/: Cargo.toml
datafusion_test/src/: main.rs
db_rust/: Cargo.toml
db_rust/src/: main.rs
hello/: Cargo.toml
hello-rust/: Cargo.toml
hello-rust/src/: main.rs
leap-year/: Cargo.toml
leap-year/src/: main.rs
log-collector/: Cargo.toml
log-collector/api/: Cargo.toml
log-collector/api/src/: lib.rs
log-collector/server/: Cargo.toml
machine_learning/: Cargo.toml  docker-compose.yml
make_os/: Cargo.toml
make_os/src/: main.rs
my_os/src/: main.rs
numberplace/: Cargo.toml
numberplace/src/: lib.rs
parser/: Cargo.toml
parser/src/: main.rs
rpn/: Cargo.toml
rpn/src/: main.rs
rust_bigginer_book/: Cargo.toml
rust_csv/: Cargo.toml
rust_practice/: Cargo.toml
start-aw/: Cargo.toml
static-files/: Cargo.toml
templates/: Cargo.toml
todo/: Cargo.toml  Dockerfile  todo.db
ui_demo/: Cargo.toml
wordcount/: Cargo.toml  text.txt
(+40 files in other folders)
